[package]
name = "tokio_agnostic_uds"
edition = "2018"
version = "0.1.0"
license = "MIT"
authors = ["Thomas Braun"]
description = "Unix Domain sockets for Tokio...on Windows!"
repository = "https://github.com/tbraun96/tokio-agnostic-uds"
readme = "README.md"
# keywords = ""
categories = ["asynchronous", "uds", "networking"]
exclude = [".gitignore"]

[dependencies]
bytes = "0.5.0"
iovec = "0.1.2"
log = "0.4.2"
mio = "0.6.20"
futures = "0.3.5"
tokio = { version = "^0.2.22", features = ["full", "uds"] }
pin-project = "0.4.25"

[target.'cfg(windows)'.dependencies]
mio-uds-windows = { git = "https://github.com/Azure/mio-uds-windows.git", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
tokio-util = { version = "0.3.1", features = ["codec"] }
